@@ -2,6 +2,7 @@
 
 	* Set more configuration defaults in case schema is missing (Bug #434097)
         * Use configured data dir for autosaves, not ~/.glchess
+        * Execute AIs in ~/.gnome2/glchess/logs to avoid making files in ~ (Bug #424010)
 
 2007-04-25  Robert Ancell  <robert.ancell@gmail.com>
 
